clusters/homelab/apps/homer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homer
  namespace: homer
  labels:
    app: homer
spec:
  selector:
    app: homer
  ports:
  - port: 80 # Keep the service port as 80 for the ingress
    targetPort: 8080 # Target the container's port 8080
    protocol: TCP
    name: http
